# HTTPClient

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  lib.rs
client/: asynchronous.rs  blocking.rs  mod.rs
client/helpers/: client.rs  load_balancer.rs  macros.rs  mod.rs  state.rs  strategy.rs
